--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,7 @@ add_subdirectory(miniScene)
 # ------------------------------------------------------------------
 # the miniScene python binding
 # ------------------------------------------------------------------
-add_subdirectory(pyminiScene)
+#add_subdirectory(pyminiScene)
 
 # ------------------------------------------------------------------
 # various importers from other file formats
